--- a/Kuva.html
+++ b/Kuva.html
@@ -151,8 +151,8 @@
     </head>
 
     <body>
-        <img id=pic src="Kuva Ivara.png">
-        <a href="Ivara Guide.html"><input id="back" type="button" value="BACK"></a>
+        <img id=pic src="Kuva Ivara.PNG">
+        <a href="index.html"><input id="back" type="button" value="BACK"></a>
         <h6 id="title">KUVA</h6>
         <div id="skin_box">
             <p id="skin_desc">A look created after the defeating high ranking Grineer Officials, Fugitives, Assassins, and mainly the Kuva Liches. Using it gives off an aura of fear within the Grineer.</p>
