--- a/Grineer.html
+++ b/Grineer.html
@@ -151,8 +151,8 @@
     </head>
 
     <body>
-        <img id=pic src="Grineer Ivara.png">
-        <a href="Ivara Guide.html"><input id="back" type="button" value="BACK"></a>
+        <img id=pic src="Grineer Ivara.PNG">
+        <a href="index.html"><input id="back" type="button" value="BACK"></a>
         <h6 id="title">GRINEER</h6>
         <div id="skin_box">
             <p id="skin_desc">A minimalistic look keeping the tenno ways, but still has the grineer characteristics. This is well common for anyone who prefers a clean and sleek type of style.</p>
