--- a/Dva.html
+++ b/Dva.html
@@ -151,8 +151,8 @@
     </head>
 
     <body>
-        <img id=pic src="Dva Ivara.png">
-        <a href="Ivara Guide.html"><input id="back" type="button" value="BACK"></a>
+        <img id=pic src="Dva Ivara.PNG">
+        <a href="index.html"><input id="back" type="button" value="BACK"></a>
         <h6 id="title">DVA</h6>
         <div id="skin_box">
             <p id="skin_desc">Cute girlish look for the huntress, it fits for any type of loacation and season. Wether it could be in the Frozen lands of Orb Vallis or the Gara Lake of the Eidolon roamed Plains, it suits her well.</p>
